--- a/straw.html
+++ b/straw.html
@@ -55,7 +55,7 @@
             </div>
          </div>
          <div class="sec2">
-            <h1>Strawberry cheesecake in 4 easy steps</h1>
+            <h1>Strawberry cheesecake in 4 easy steps (HAFO'S CAKE ++)</h1>
          </div>
          <div class="sec3">
             <div class="menu">
